--- a/projects/arcgis_javascript_api/cctv_baltimore/cctv_baltimore.html
+++ b/projects/arcgis_javascript_api/cctv_baltimore/cctv_baltimore.html
@@ -7,7 +7,7 @@
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
     <title>
-      Data-driven continuous color | Sample | ArcGIS API for JavaScript 4.24
+      CCTV Cameras in Baltimore | Example Web App | ArcGIS API for JavaScript 4.24
     </title>
 
     <link
