--- a/projects/leaflet_maps/public_charging_stations_maryland_web_map/index.html
+++ b/projects/leaflet_maps/public_charging_stations_maryland_web_map/index.html
@@ -17,7 +17,7 @@
             height: 1232px;
         }
         </style>
-        <title></title>
+        <title>Public Charging Stations in Maryland</title>
     </head>
     <body>
         <div id="map">
